--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,6 @@ PyMongo==4.5.0
 dnspython==2.3.0
 python-dotenv==1.0.0
 Flask-JWT-Extended==4.4.4
+Werkzeug>=2.3.0
+Flask-PyMongo==2.3.0
+supabase==2.7.4
