--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Clear cache
+      run: |
+        sudo apt-get clean
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
