--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -13,13 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Clear cache
-      run: |
-        sudo apt-get clean
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: 3.10
+        python-version: "3.10"
+        architecture: "x64"
+      env:
+        AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
