Relax Pylint rules

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -27,4 +27,4 @@ jobs:
         pip install -r backend/requirements.txt
     - name: Analysing the code with pylint
       run: |
-        pylint backend/
+        pylint --rcfile=backend/.pylintrc --ignore=venv backend/
