--- a/backend/.pylintrc
+++ b/backend/.pylintrc
@@ -321,7 +321,6 @@ min-public-methods=2
 overgeneral-exceptions=builtins.BaseException,builtins.Exception
 
 
-[FORMAT]
 
 # Expected format of line ending, e.g. empty (any line ending), LF or CRLF.
 expected-line-ending-format=
@@ -400,8 +399,33 @@ logging-format-style=old
 # function parameter format.
 logging-modules=logging
 
+[MASTER]
+ignore=venv
+
 
 [MESSAGES CONTROL]
+disable=raw-checker-failed,
+        bad-inline-option,
+        locally-disabled,
+        file-ignored,
+        suppressed-message,
+        useless-suppression,
+        deprecated-pragma,
+        use-symbolic-message-instead,
+        C0111,      # Missing module docstring
+        C0112,      # Missing class docstring
+        C0113,      # Missing function docstring
+        R0913,      # Too many arguments
+        C0301,       # Line too long
+        R0903,      # Too few public methods
+        W0621,     # Redefining name from outer scope
+        C0103,     # Invalid variable name
+        W0718,    # Undefined variable
+        E1121,     # Too many positional arguments
+
+
+[FORMAT]
+max-line-length=120  # Increase max line length to 120 characters
 
 # Only show warnings with the listed confidence levels. Leave empty to show
 # all. Valid levels: HIGH, CONTROL_FLOW, INFERENCE, INFERENCE_FAILURE,
@@ -454,23 +478,6 @@ notes=FIXME,
 # Regular expression of note tags to take in consideration.
 notes-rgx=
 
-[MESSAGES CONTROL]
-disable=raw-checker-failed,
-        bad-inline-option,
-        locally-disabled,
-        file-ignored,
-        suppressed-message,
-        useless-suppression,
-        deprecated-pragma,
-        use-symbolic-message-instead,
-        C0111,      # Missing module docstring
-        C0112,      # Missing class docstring
-        C0113,      # Missing function docstring
-        R0913,      # Too many arguments
-        C0301       # Line too long
-
-[FORMAT]
-max-line-length=120  # Increase max line length to 120 characters
 
 
 # Maximum number of nested blocks for function / method body
